# dev-dashboard

./: .gitattributes  .gitignore  PROJECT_STATUS.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: devops.md  epics.md  future-agents.md  knowledge-base.md  monitoring.md  requirements.md  settings.local.json  ui-ux-spec.md
.claude/agents/: coder.md  kb-curator.md  monitor.md  tester.md
.claude/commands/: kb-itemize.md  kb-split.md  sequence.md
.claude/hooks/: README.md  (+1 more)
.devteam/: cicd.json
.githooks/: commit-msg  post-merge  pre-commit
.github/: dependabot.yml
.worktrees/: T4.7.state.json
docs/: T4.3-sec-fixes-2.md  devops.md  monitoring.md  requirements.md  ui-ux.md
e2e/: README.md
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  error.rs  lib.rs  logging.rs  main.rs
src-tauri/src/ipc/: cli_watcher.rs  commands.rs  events.rs  mod.rs
src-tauri/src/platform/: editor.rs  mod.rs  terminal.rs
src-tauri/src/projects/: git.rs  mod.rs  scanner.rs
src-tauri/src/runs/: manager.rs  mod.rs  orphan.rs  parser.rs  retention.rs  session.rs  transcript.rs
src-tauri/src/runs/parser/: patterns.rs
src-tauri/src/sequences/: mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/usage/: mod.rs
src-tauri/tests/: attached_md_integration.rs  bindings_shape.rs  cli_integration.rs  config_dir.rs  log_frontend_error.rs  orphan_integration.rs  project_registry_integration.rs  retention_integration.rs  settings_integration.rs
(+271 files in other folders)
