[package]
name = "dev-dashboard"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dev_dashboard_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "process", "fs", "time"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
anyhow = "1"
thiserror = "1"
git2 = "0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
ts-rs = { version = "12", features = ["uuid-impl", "serde-json-impl", "chrono-impl"], optional = true }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
tempfile = "3"

[features]
export-bindings = ["ts-rs"]
